Actions
Bug #9240
closednxge: this statement may fall through
Start date:
2018-03-06
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
../../common/io/nxge/npi/npi_vir.c:1054:10: error: this statement may fall through [-Werror=implicit-fallthrough=] offset = LDSV2_REG + LDSV_OFFSET(ldg); ../../common/io/nxge/npi/npi_vir.c:1056:2: note: here default: ^~~~~~~ ../../common/io/nxge/nxge_zcp.c:345:6: error: this statement may fall through [- Werror=implicit-fallthrough=] if (err_id == NXGE_FM_EREPORT_ZCP_CFIFO_ECC) { ^ ../../common/io/nxge/nxge_zcp.c:362:2: note: here default: ^~~~~~~ ../../common/io/nxge/npi/npi.h:247:31: error: this statement may fall through [- Werror=implicit-fallthrough=] #define NPI_ERROR_MSG(params) npi_debug_msg params ../../common/io/nxge/npi/npi_mac.c:1291:4: note: in expansion of macro 'NPI_ERRO R_MSG' NPI_ERROR_MSG((handle.function, NPI_ERR_CTL, ^~~~~~~~~~~~~ ../../common/io/nxge/npi/npi_mac.c:1295:3: note: here default: ^~~~~~~ In file included from ../../common/io/nxge/npi/npi_mac.h:35:0, from ../../common/io/nxge/npi/npi_mac.c:28: ../../common/io/nxge/npi/npi.h:247:31: error: this statement may fall through [- Werror=implicit-fallthrough=] #define NPI_ERROR_MSG(params) npi_debug_msg params ../../common/io/nxge/npi/npi_mac.c:1388:4: note: in expansion of macro 'NPI_ERRO R_MSG' NPI_ERROR_MSG((handle.function, NPI_ERR_CTL, ^~~~~~~~~~~~~ ../../common/io/nxge/npi/npi_mac.c:1393:3: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 73ff8cc657529b1dc6066efa02507cc59523bf46
commit 73ff8cc657529b1dc6066efa02507cc59523bf46 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-01T21:48:01.000Z 9240 nxge: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Gordon Ross <gwr@nexenta.com>
Actions