9240 nxge: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Gordon Ross <gwr@nexenta.com>