usr/src/uts/common/io/nxge/nxge_zcp.c
@@ -23,8 +23,6 @@
  * Use is subject to license terms.
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include <nxge_impl.h>
 #include <nxge_zcp.h>
 #include <nxge_ipp.h>
@@ -358,6 +356,7 @@ nxge_zcp_inject_err(p_nxge_t nxgep, uint32_t err_id)
 				break;
 			}
 		}
+		/* FALLTHROUGH */
 
 	default:
 		if (err_id == NXGE_FM_EREPORT_ZCP_RRFIFO_OVERRUN)
